Responsiveness Review: changed index button margins to VH instead of REM to resolve content pushed off screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ body, html {
 #full-screen-menu {
     position: relative;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     background: linear-gradient(217deg, rgba(42, 46, 51), rgba(29, 43, 53) 70.71%), linear-gradient(127deg, rgba(42, 46, 51), rgba(24, 42, 56) 70.71%), linear-gradient(336deg, rgba(042, 46, 51), rgba(24, 42, 56) 70.71%);
@@ -183,7 +183,7 @@ body, html {
     display: block;
     width: 40vw;
     background-color: var(--ink6-LED2LOW);
-    margin: 3rem 0;
+    margin: 3vh 0;
 }
 
 #title-menu .btn a {
